# DiffSage

./: .env.example  .gitignore  COMMIT_EDITMSG  pyproject.toml
docs/: architecture.md  conventions.md
docs/architecture/: ADR-001-src-layout.md  ADR-002-layered-architecture.md  ADR-003-storage-abstraction.md  ADR-004-httpx-over-sdk.md  ADR-005-command-registration.md  ADR-006-logging-separation.md
src/diffsage/: __main__.py  cli.py
src/diffsage/commands/: doctor.py
src/diffsage/config/: defaults.py  loader.py  settings.py
src/diffsage/core/: exceptions.py
src/diffsage/git/: client.py
src/diffsage/logging/: logger.py
src/diffsage/models/: doctor_report.py  git.py
src/diffsage/services/: doctor_service.py
tests/git/: test_client.py
