[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffsage"
version = "0.1.0"
description = "An AI-powered Git workflow assistant."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
    { name = "Gunitha Rathnayake" }
]

dependencies = [
    "typer>=0.16,<0.17",
    "rich>=14,<15",
    "pydantic>=2.11,<3",
    "httpx>=0.28,<0.29",
    "PyYAML>=6.0,<7",
    "python-dotenv>=1.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.12,<0.13",
    "pre-commit>=4,<5",
]

[project.scripts]
diffsage = "diffsage.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]